Bug fix to stop tables overflowing and breaking UI.

--- a/src/app/pages/getting-started/academy/lesson/lesson-content-styling.scss
+++ b/src/app/pages/getting-started/academy/lesson/lesson-content-styling.scss
@@ -17,8 +17,14 @@
       width: 100%;
       overflow: auto;
       white-space: break-spaces;
+      word-break: break-all;
       display: block;
       font-size: .8rem;
+    }
+
+    table {
+      table-layout: fixed;
+      word-break: break-all;
     }
 
     h3 {
